feat: add endpoint to retrieve all deliveries with address and buyer's phone number
